--- a/src/views/detail.ejs
+++ b/src/views/detail.ejs
@@ -60,11 +60,14 @@
         <!-- 选项卡内容 -->
         <div class="tab-content mt-1" id="myTabContent">
             <div class="tab-pane fade show active" id="tab1" role="tabpanel" aria-labelledby="tab1-tab">
-                <div class="container" id="containerDiv">
+                <div class="container" style="margin-top:1rem" id="containerDiv">
                 </div>
             </div>
             <div class="tab-pane fade" id="tab2" role="tabpanel" aria-labelledby="tab2-tab">
-                <div class="container" id="sumList">
+                <div class="container" style="margin-top:1rem" id="widgetDiv">
+                </div>
+                <div class="container" style="margin-top:1rem" id="sumList">
+                    
                 </div>
             </div>
         </div>
