--- a/src/views/procpage.ejs
+++ b/src/views/procpage.ejs
@@ -54,7 +54,9 @@
             <!-- 状态文字 -->
             <div class="status-text">正在处理</div>
         </div>
+        <div class="loading-container mt-2"><small>系统正渲染选区结构、统计各选区数据</small></div>
         <div class="status-container mt-4">
+            
             <small class="status-desc">状态加载中</small>
         </div>
     </div>
