--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -39,6 +39,14 @@
             <button type="submit" class="btn btn-primary w-100">提交</button>
         </form>
         <div id="response" class="mt-4 text-center"></div>
+    </div>
+    <!-- 开源提示 -->
+    <div class="text-center mt-4">
+        <small>
+            WebMatica 是一个开源项目。
+            <a style="text-decoration:none" href="https://github.com/AgathaNetwork/WebMatica" target="_blank" rel="noopener noreferrer">GitHub</a> |
+            <a style="text-decoration:none" href="/license" target="_self">开源许可证</a>
+        </small>
     </div>
 
     <!-- 引入 Bootstrap JS 和依赖 -->
