--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -45,7 +45,7 @@
         <small>
             WebMatica 是一个开源项目。
             <a style="text-decoration:none" href="https://github.com/AgathaNetwork/WebMatica" target="_blank" rel="noopener noreferrer">GitHub</a> |
-            <a style="text-decoration:none" href="/license" target="_self">开源许可证</a>
+            <a style="text-decoration:none" href="/license" target="_self">开源许可证</a> ｜ R2
         </small>
     </div>
 
